--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
               "src/assets"
             ],
             "styles": [
+              "src/assets/styles/palette-angular-material.css",
               "src/assets/styles/sga-theme-angular-material.scss",
               "src/styles.scss"
             ],
