--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@sweetalert2/themes": "^5.0.16",
     "crypto-js": "^4.2.0",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^9.0.1",
