--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "crypto-js": "^4.2.0",
     "lodash": "^4.17.21",
     "rxjs": "~7.8.0",
+    "sga-cliente-evaluacion-docente-mf": "file:",
     "single-spa": ">=4.0.0",
     "single-spa-angular": "^9.0.1",
     "spinner-util": "^0.0.2",
